MFC r283636: - Don't request BUS_DMA_ALLOCNOW for dma tags, that requires enormous amount of memory. - Don't request segsize of BUS_SPACE_MAXSIZE_32BIT, when maxsize is MCLBYTES.

With this change bwi_attach() can succeed on i386.

PR:		214235
Submitted by:	scottl